--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Web App Medical Appointment for Polyclinic</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
 </head>
 
 <body>
@@ -13,11 +13,13 @@
     <header>
         <h1>Welcome to Your Website</h1>
         <h2>Why are you here</h2>
-        <h3>Techup</h3>
+        <h3 class="text">Techup</h3>
+        <h4>Hang in there</h4>
+        <h5 class="text">Time to go home</h5>
     </header>
 
     <main>
-        <p>This is where the main content goes.</p>
+        <p id="demoFont">This is where the main content goes.</p>
         <p>Check the weather <a href="https://www.nea.gov.sg/corporate-functions/weather" target="_blank">here</a></p>
     </main>
 
